--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mysql2": "^3.2.4"
+  },
+  "scripts": {
+    "start": "node app.js"
   }
 }
