added lots along with TESTS

--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
     "mysql2": "^3.2.4"
   },
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "jest --watchAll"
+  },
+  "devDependencies": {
+    "jest": "^29.5.0",
+    "supertest": "^6.3.3"
   }
 }
