--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
+  "name": "modlist-api",
+  "version": "1.0.0",
+  "main": "index.js",
   "dependencies": {
+    "axios": "^1.4.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
