--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mysql2": "^3.2.4"
+    "mysql2": "^3.2.4",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.3"
   },
   "scripts": {
     "start": "node app.js",
